--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Talk</title>
     <link rel="stylesheet" href="style.css">
@@ -12,10 +11,10 @@
         <div id="nav-heading">Banana Talk</div>
     </nav>
     <main>
-        <textarea class="translate-input" id="translate-input" placeholder="Put your message here which you want to convert to banana language"></textarea>
+        <textarea  id="translate-input" placeholder="Put your text here to convert  banana language"></textarea>   
         <button id="translate-button">Translate To Banana</button>
         <div>Translation will come here👇</div>
-        <div id="translate-output"></div>      
+        <div id="translate-output"></div>     
     </main>
     <footer>
         <div id="footer-heading">about</div>
