--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="nav-heading">Banana Talk</div>
     </nav>
     <main>
-        <textarea  id="translate-input" placeholder="Put your text here to convert  banana language"></textarea>   
+        <textarea  id="translate-input" placeholder="Put your text here to convert into banana language"></textarea>   
         <button id="translate-button">Translate To Banana</button>
         <div>Translation will come here👇</div>
         <div id="translate-output"></div>     
